# shogi_mate_solver

./: Cargo.toml  how_to_use.txt  run.sh
.github/workflows/: rust.yml
mate_solver/: ARCHITECTURE.dot  Cargo.toml  Makefile
mate_solver/src/: lib.rs  position_wrapper.rs  tt.rs
mate_solver/src/df_pn/: search.rs
mate_solver/src/eval/: mod.rs  search.rs  value.rs
problems/: .gitignore  fetch.sh
src/: kif.rs  lib.rs
tt_experiments/: README.md  run.py
