[package]
name = "shogi_mate_solver"
version = "0.1.0"
edition = "2021"

[dependencies]
shogi_core = "0.1"
shogi_usi_parser = "0.1"
shogi_official_kifu = "0.1"
tinyget = { version = "1.0", features = ["https"] }
encoding_rs = "0.8"

[[bin]]
name = "mate_solver"
path = "src/bin/mate_solver.rs"

[[bin]]
name = "to_sfen"
path = "src/bin/to_sfen.rs"

[profile.dev]
debug = false

[patch.crates-io]
shogi_official_kifu = { path = "../shogi_official_kifu/shogi_official_kifu" }
shogi_legality_lite = { git = "https://github.com/rust-shogi-crates/shogi_legality_lite" }
