[package]
name = "mate_solver"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
once_cell = "1"
shogi_legality_lite = "0.1.3"
shogi_core = { version = "0.1.4", features = ["hash"] }
rand = { version = "0.9", default-features = false }
rand_chacha = { version = "0.9", default-features = false }

[dev-dependencies]
shogi_usi_parser = "0.1"
